Update for Ubuntu 18.04.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,39 @@
-# Set in CLion CMake Environment:
-# export CC=/usr/local/gcc-7.3/bin/gcc-7.3
-# export CXX=/usr/local/gcc-7.3/bin/g++-7.3
-# export LD_LIBRARY_PATH=/usr/local/gcc-7.3/lib64/
-
 cmake_minimum_required(VERSION 3.9)
 project(clemote)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_VERBOSE_MAKEFILE ON)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
+find_package(
+  Boost COMPONENTS system filesystem REQUIRED
+)
 
 include_directories(
-  libraries/fmt-3.0.1
-  libraries/taglib/mytaglib/include
+  libraries/fmt/include
   libraries/sdbus-cpp/include
+  libraries/taglib
+  libraries/taglib/taglib
+  libraries/taglib/taglib/mpeg/id3v2
+  libraries/taglib/taglib/toolkit
 )
 
 link_directories(
-  /usr/local/gcc-7.3/lib64/
-  libraries/fmt-3.0.1/fmt
-  libraries/taglib/mytaglib/lib
+  libraries/fmt/
+  libraries/taglib/taglib
   libraries/sdbus-cpp/src/.libs
 )
 
 link_libraries(
-  boost_filesystem
-  boost_system
+  ${Boost_FILESYSTEM_LIBRARY}
+  ${Boost_SYSTEM_LIBRARY}
   evdev
   fmt
   sdbus-c++
   systemd
   tag
   z
+  pulse
 )
 
 add_executable(
@@ -38,4 +41,5 @@ add_executable(
   src/main.cpp
   src/clementine_dbus.cpp
   src/tag.cpp
+  src/pulse_audio.cpp
 )
