--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,22 @@
 cmake_minimum_required(VERSION 3.9)
 project(clemote)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
+set(CMAKE_CXX_FLAGS -Wfatal-errors)
 
 find_package(
   Boost COMPONENTS system filesystem REQUIRED
 )
 
 include_directories(
-  libraries/sdbus-cpp/include
+    libraries/sdbus-cpp/include
 )
 
 link_directories(
-  libraries/sdbus-cpp/src/.libs
+    libraries/sdbus-cpp/src/.libs
 )
 
 link_libraries(
@@ -27,6 +29,8 @@ link_libraries(
   systemd
   tag
   z
+  pthread
+  asound
 )
 
 add_executable(
@@ -34,5 +38,6 @@ add_executable(
   src/main.cpp
   src/clementine_dbus.cpp
   src/tag.cpp
-  src/pulse_audio.cpp
+  src/alsa_volume.cpp
 )
+
